# lua-snapshot

./: .gitignore  1.lua  README.md  incr.txt  lua_gc_node.c  lua_gc_node.h  snapshot.c  snapshot.h
luasnapshot-c/: 1.lua  lua_gc_node.c  lua_gc_node.h  snapshot.c  snapshot.h
luasnapshot-c/test/: 1.lua  2.lua  3.lua  4.lua  5.lua  6.lua  7.lua  8.lua  dump.lua
luasnapshot-rust/: 1.c  1.lua  lua_gc_node.h  snapshot.c
luasnapshot-rust/rust/: Cargo.toml  build.rs
luasnapshot-rust/rust/src/: LuaGcNode.rs  cJSON.rs  lib.rs  main.rs
luasnapshot-rust/rust/src/LuaGcNode/: LuaGcNode.rs  mod.rs
luasnapshot-rust/rust/src/LuaSrc/: Makefile  ldebug.c  lgc.c  linit.c  lstate.c  lstate.h  lua  lua.h  luac  luaconf.h  lualib.h  lz4.h
luasnapshot-rust/rust/src/c/: lua_gc_node.h  snapshot.c
luasnapshot-rust/rust/src/cJSON/: cJSON.rs  mod.rs
