[package]
name = "luasnapshot"
version = "0.1.0"
authors = ["winsonyslu <winsonyslu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
name = "luasnapshot"

[dependencies]
libc = "0.2.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
