[package]
name = "snapshot"
version = "0.1.0"
authors = ["winsonyslu <winsonyslu@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]
name = "snapshot"
links = "libsnapshot1.a"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = {version="1.0", features = ["parallel"]}
